Corrected Speaker Image Issue
Some images will need to be cropped manually to be centered properly in
the view area.

--- a/assets/stylesheets/_site.less
+++ b/assets/stylesheets/_site.less
@@ -125,32 +125,47 @@
       .back {
         opacity: 0;
         p {
-          padding: 20px;
+          padding: 20px 20px 0 20px;
           text-align: left;
           font-size: 75%;
           overflow: hidden;
-          height: 250px;
-          margin-bottom: 20px;
+          height: 235px !important;
+          margin-bottom: 0;
         }
-        a {
+        .linkgroup {
           clear: both;
-          color: @white;
-          margin: 0 5px;
-          i {
-            border: 1px solid @white;
-            .radius(50%);
-            padding: 10px; 
-          }
-          &:hover {
-            color: darken(@colour1, 20%);
+          margin-top: 20px;
+          text-align: center;
+          display: block;
+          a {
+            color: @white;
+            display: inline-block;
+            padding-left: 2px;
+            padding-right: 2px;
             i {
-              border: 1px solid darken(@colour1, 20%);
+              border: 1px solid @white;
+              .radius(50%);
+              padding: 10px;
+            }
+            &:hover {
+              color: darken(@colour1, 20%);
+              i {
+                border: 1px solid darken(@colour1, 20%);
+              }
             }
           }
         }
       }
-      img {
+      .imagecontainer {
+        width: 100%;
+        height: 240px;
         margin-bottom: 30px;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: auto;
+          min-height: 240px;
+        }
       }
       h3 {
         text-transform: uppercase;
