--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -341,19 +341,26 @@ header img {
   opacity: 0;
 }
 #speakers .speaker .back p {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   text-align: left;
   font-size: 75%;
   overflow: hidden;
-  height: 250px;
-/*  margin-bottom: 20px;*/
+  height: 235px !important;
+  margin-bottom: 0;
 }
-#speakers .speaker .back a {
+#speakers .speaker .back .linkgroup {
   clear: both;
-  color: #ffffff;
-  margin: 0 5px;
+  margin-top: 20px;
+  text-align: center;
+  display: block;
 }
-#speakers .speaker .back a i {
+#speakers .speaker .back .linkgroup a {
+  color: #ffffff;
+  display: inline-block;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+#speakers .speaker .back .linkgroup a i {
   border: 1px solid #ffffff;
   border-radius: 50%;
   -moz-border-radius: 50%;
@@ -363,17 +370,23 @@ header img {
   -webkit-background-clip: padding-box;
   padding: 10px;
 }
-#speakers .speaker .back a:hover {
+#speakers .speaker .back .linkgroup a:hover {
   color: #992600;
 }
-#speakers .speaker .back a:hover i {
+#speakers .speaker .back .linkgroup a:hover i {
   border: 1px solid #992600;
 }
-#speakers .speaker img {
-  margin-bottom: 30px;
+#speakers .speaker .imagecontainer {
+  width: 100%;
   height: 240px;
+  margin-bottom: 30px;
+  overflow: hidden;
 }
-
+#speakers .speaker .imagecontainer img {
+  width: 100%;
+  height: auto;
+  min-height: 240px;
+}
 #speakers .speaker h3 {
   text-transform: uppercase;
   font-weight: 100;
